--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_teamManiacs_project"
         tools:targetApi="31">
+
         <activity
             android:name=".main.MainActivity"
             android:exported="true">
@@ -22,5 +23,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
