--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.Android_teamManiacs_project"
         tools:targetApi="31">
         <activity
+            android:name=".detail.CommentModel"
+            android:exported="false" />
+        <activity
             android:name=".main.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".detail.VideoDetailActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
