--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
-
+    implementation 'me.relex:circleindicator:2.1.4'
 }
